# ans-data-transformation

./: README.md  pyproject.toml
src/: main.py
src/data_processing/: __init__.py  cleaner.py  transformer.py  validator.py
src/pdf_extraction/: __init__.py  downloader_pdf.py  extractor.py
src/storage/: __init__.py  csv_handler.py  zip_handler.py
tests/integration/: test_main.py
tests/unit/: test_cleaner.py  test_csv_handler.py  test_downloader_pdf.py  test_extractor.py  test_transformer.py  test_validator.py  test_zip_handler.py
