[project]
name = "ans-data-transformation-test"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcoAntonioGritti",email = "m9946658@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber (>=0.11.5,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
